# matrices-parallel-block-product

./: CMakeLists.txt  README.md  matrix_block_dot.c  tests.c
src/: main.c  matrix_ops.c  matrix_ops.h
tests/: tests.c
